# tutor-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.md  run-agent.sh  tutor_assistant_langchain_walkthrough.ipynb
notebooks/: class_notes_pipeline.ipynb  matura_grading_pipeline.ipynb
secrets/: .env.example
src/tutor/: __init__.py
src/tutor/agent/: __init__.py  __main__.py  cli.py  graph.py  models.py  session.py  stream_parser.py
src/tutor/assistant/: __main__.py  cli.py
src/tutor/core/: __init__.py  auth.py  calendar.py  memory.py  models.py  telemetry.py  utils.py
src/tutor/daily_summary/: __init__.py  models.py  providers.py  service.py
src/tutor/drive/: __init__.py  google.py
src/tutor/drive_cleanup/: __init__.py  models.py  providers.py  service.py
src/tutor/homework/: __init__.py  models.py  providers.py  service.py
src/tutor_assistant/: __init__.py  __main__.py  cli.py  onboarding.py
tests/: mocks.py  test_onboarding.py
tests/integration/: test_agent_critical_approval_integration.py  test_daily_summary_integration.py  test_google_onboarding_integration.py  test_homework_integration.py  test_vacation_integration.py
tests/unit/: test_agent_graph.py  test_agent_tools.py  test_auth.py  test_cli_memory.py  test_cli_reasoning.py  test_critical_tool_approval.py  test_daily_summary.py  test_date_parsing.py  test_drive_cleanup.py  test_homework.py  test_memory.py  test_onboarding.py  test_telemetry.py  test_tool_error_policy.py  test_vacation.py
(+65 files in other folders)
