[project]
name = "tutor-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.90",
    "fitz>=0.0.1.dev2",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "langchain>=1.2.15",
    "langchain-aws>=1.4.4",
    "langgraph>=1.1.8",
    "pillow>=12.2.0",
    "pydantic>=2.13.2",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
]

[project.scripts]
tutor-assistant = "tutor_assistant.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: marks tests that call real external services",
]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.basedpyright]
extraPaths = ["src"]

[tool.uv]
package = true
